# MDitD

./: .gitignore  CLAUDE.md  DEVELOPMENT_STEPS.md  GEMINI.md  IMPROVEMENTS.md  PLAN.md  README.md  config.py  logging_config.py  main.py  pyproject.toml  settings.py  test_file.txt
.claude/: settings.local.json
final_test/: test2.md
static/css/: style.css
static/js/: app.js
templates/: index.html
test_api/: test_file.md
tests/: __init__.py  conftest.py  test_api.py  test_converter.py  test_file_handler.py
utils/: __init__.py  converter.py  file_handler.py
