[project]
name = "mditd"
version = "0.1.0"
description = "MarkItDown Web Application - Convert documents to Markdown via web interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "markitdown[all]>=0.0.1a4",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "uvicorn[standard]>=0.24.0",
    "aiofiles>=24.1.0",
    "pydantic-settings>=2.10.1",
    "psutil>=7.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "pytest-mock>=3.15.0",
]

[project.scripts]
mditd = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0"
]
